LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Disable_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Disable_Invitation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Org level to disable invitation email</inlineHelpText>
    <label>Disable Invitation Email</label>
    <type>Checkbox</type>
</CustomField>