LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Enable_Password__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Enable_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Passcode For Non-PMI Meeting</label>
    <type>Checkbox</type>
</CustomField>