LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Enable_Webinar_Feature__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Enable_Webinar_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Webinar Feature</label>
    <type>Checkbox</type>
</CustomField>