LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Populate_Details_into_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Populate_Details_into_Event_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populate Meeting Details into Event Description</description>
    <inlineHelpText>Populate Meeting Details into Event Description</inlineHelpText>
    <label>Populate Details into Event Description</label>
    <type>Checkbox</type>
</CustomField>